--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "kill-port": "^1.6.1",
     "knex": "^1.0.4",
     "sqlite3": "^5.0.2"
   }
